add stylecss changes

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <!-- -->
 <section>
     <div class="container_3">
-        <div class="d_flex_1">
+        <div class="d_flex_2">
             <div class="description_2">
                 <p>Каждая задача по разработке фирменного стиля уникальна для нас — это новый вызов и новые эмоции. Мы принципиально не предлагаем вам стандартизированные пакеты “эконом”, “стандрат”, или “премиум”, мы не штампуем, мы - создаем.</p>
                 <p>Стоимость разработки фирменного стиля в нашем агентстве начинается от 120 000 руб., финальную планку без брифинга определить невозможно - давайте созвонимся и обсудим ваш проект!</p>
@@ -129,7 +129,7 @@
         <div>
             <img class="project_banner" src="images/project_1.jpg" alt="project_amperia">
         </div>
-        <div class="d_flex_1">
+        <div class="d_flex_project">
             <h3>Amperia</h3>
             <a href="#">Смотреть проект</a>
         </div>
@@ -142,7 +142,7 @@
         <div>
             <img class="project_banner" src="images/project_2.jpg" alt="project_AQLifecare">
         </div>
-        <div class="d_flex_1">
+        <div class="d_flex_project">
             <h3>AQ.Lifecare</h3>
             <a href="#">Смотреть проект</a>
         </div>
@@ -155,7 +155,7 @@
         <div>
             <img class="project_banner" src="images/project_3.jpg" alt="project_Vilata">
         </div>
-        <div class="d_flex_1">
+        <div class="d_flex_project">
             <h3>Vilata</h3>
             <a href="#">Смотреть проект</a>
         </div>
@@ -168,7 +168,7 @@
         <div>
             <img class="project_banner" src="images/project_4.jpg" alt="project_Coral_Black">
         </div>
-        <div class="d_flex_1">
+        <div class="d_flex_project">
             <h3>Coral Black</h3>
             <a href="#">Смотреть проект</a>
         </div>
@@ -179,7 +179,7 @@
 <section>
     <div class="container">
         <h3 class="title_2">Гайдлайны в подарок</h3>
-        <div class="d_flex_1">
+        <div class="d_flex_project">
             <div>
                 <img src="images/Rectangle%2069.jpg" alt="Guideline">
             </div>
@@ -195,7 +195,7 @@
             <h3>Оставьте заявку на разработку вашего продукта</h3>
             <p>Наши эксперты свяжутся с вами в ближайшее время</p>
             <form action="#" method="post">
-                <div class="d_flex_1">
+                <div class="d_flex_application">
                     <div>
                         <label for="first_name"></label>
                         <input class="first_name_phone" id="first_name" type="text" name="first_name" placeholder="Ваше Имя">
@@ -323,7 +323,7 @@
 <section class="minor_banner">
     <div class="container">
         <h2 class="subtitle_2">Гарантия качества: 5 фундаментальных преимуществ работать с нами</h2>
-        <ul class="d_flex list list_2">
+        <ul class="list list_2">
             <li>
                 <span>1</span>
                 <p>Разработкой вашего фирменного стиля займется команда профессионалов с высшим профильным образованием.</p>
@@ -350,7 +350,7 @@
 <!-- -->
 <footer>
     <div class="container">
-        <div class="d_flex_1">
+        <div class="d_flex_contact">
             <div>
                 <h3 class="headline">Связаться с нами</h3>
                 <form action="#" method="post">
