--- a/index.html
+++ b/index.html
@@ -33,39 +33,36 @@
             </li>
             <li>
                 <a href="#" class="soc" title="instagram" target="_blank">
-                    <img src="images/Group%208.svg" alt="instagram">
+                    <img src="images/Group8.svg" alt="instagram">
                 </a>
             </li>
         </ul>
         </div>
     </div>
 </header>
-<div class="owl-carousel">
-    <div> Your Content </div>
-    <div> Your Content </div>
-    <div> Your Content </div>
-    <div> Your Content </div>
-    <div> Your Content </div>
-    <div> Your Content </div>
-    <div> Your Content </div>
+<div class="position">
+<div class="container">
+    <h1>Вам нужен фирменный <br> стиль или ребрендинг?</h1>
+    <p>Разработаем в срок от 10-ти дней</p>
+    <a href="#" class="btn">Портфолио <i class="fas fa-suitcase"></i>
+    </a>
+    <a href="#" class="btn">Оставить заявку <i class="fas fa-file-alt"></i>
+    </a>
 </div>
-<section class="main_banner">
-    <div class="container">
-        <h1>Вам нужен фирменный <br> стиль или ребрендинг?</h1>
-        <p>Разработаем в срок от 10-ти дней</p>
-        <a href="#" class="btn">Портфолио <i class="fas fa-suitcase"></i>
-        </a>
-        <a href="#" class="btn">Оставить заявку <i class="fas fa-file-alt"></i>
-        </a>
-    </div>
-</section>
+</div>
+<div class="owl-carousel">
+    <section class="main_banner"></section>
+    <section class="main_banner banner_2"></section>
+    <section class="main_banner banner_3"></section>
+    <section class="main_banner banner_4"></section>
+</div>
 <!-- -->
 <section>
     <div class="container">
         <h3 class="title">Что такое фирменный стиль</h3>
         <div class="brand_identity">
             <div>
-            <img src="images/Rectangle%207.jpg" alt="brand_identity">
+            <img src="images/Rectangle7.jpg" alt="brand_identity">
             </div>
             <div class="description">
                 <p >Это набор тех уникальных «признаков», по которым клиент отличит вас от других компаний. Фирменный стиль отражает миссию бренда, ценности, является способом его идентификации, формирует определённое восприятие в коммуникации с потребителями.</p>
@@ -117,7 +114,7 @@
             <div>
                 <h3 class="title_2">Сколько стоит фирменный стиль?</h3>
                 <div>
-                    <img class="project_banner" src="images/Rectangle%2020.jpg" alt="price">
+                    <img class="project_banner" src="images/Rectangle20.jpg" alt="price">
                 </div>
             </div>
         </div>
@@ -181,7 +178,7 @@
         <h3 class="title_2">Гайдлайны в подарок</h3>
         <div class="d_flex_project">
             <div>
-                <img src="images/Rectangle%2069.jpg" alt="Guideline">
+                <img src="images/Rectangle69.jpg" alt="Guideline">
             </div>
             <div class="about_guideline">
                 <div>
@@ -223,7 +220,7 @@
         <h2 class="stages">Этапы создания<br> фирменного стиля<br> и гайдлайна</h2>
         <div class="flex_container">
             <div class="item_1">
-                <img src="images/Group%2064.svg" alt="creative_search">
+                <img src="images/Group64.svg" alt="creative_search">
                 <h4>Погружение<br> в креативный поиск</h4>
             </div>
             <div class="item_2">
@@ -259,7 +256,7 @@
         </div>
         <div class="flex_container">
             <div class="item_1">
-                <img src="images/Group%2066.svg" alt="guideline">
+                <img src="images/Group66.svg" alt="guideline">
                 <h4>Создание гайдлайна</h4>
             </div>
             <div class="item_2">
