--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 </head>
 <body>
+
 <header>
     <div class="container">
         <a href="#" class="logo">
@@ -61,7 +62,7 @@
     <div class="container">
         <h3 class="title">Что такое фирменный стиль</h3>
         <div class="brand_identity">
-            <div>
+            <div class="brand_identity_banner">
             <img src="images/Rectangle7.jpg" alt="brand_identity">
             </div>
             <div class="description">
@@ -178,7 +179,7 @@
         <h3 class="title_2">Гайдлайны в подарок</h3>
         <div class="d_flex_project">
             <div>
-                <img src="images/Rectangle69.jpg" alt="Guideline">
+                <img class="guideline_banner" src="images/Rectangle69.jpg" alt="Guideline">
             </div>
             <div class="about_guideline">
                 <div>
@@ -193,22 +194,22 @@
             <p>Наши эксперты свяжутся с вами в ближайшее время</p>
             <form action="#" method="post">
                 <div class="d_flex_application">
-                    <div>
+                    <div class="application_order_1">
                         <label for="first_name"></label>
                         <input class="first_name_phone" id="first_name" type="text" name="first_name" placeholder="Ваше Имя">
                     </div>
-                    <div>
+                    <div class="application_order_2">
                         <label for="phone"></label>
                         <input class="first_name_phone" id="phone" type="tel" name="phone" placeholder="+7 (999) 999-99-99">
                     </div>
-                    <div>
+                    <div class="application_order_3">
                         <button type="submit" class="btn_application">Оставить заявку</button>
                     </div>
-                </div>
-                <div>
-                    <label class="checkbox_label" for="i_agree">
-                        <input type="checkbox" id="i_agree" name="i_agree"><span class="checkbox"></span>Я принимаю <a class="checkbox_link" href="#">условия передачи персональных данных</a>
-                    </label>
+                    <div class="checkbox_div application_order_4">
+                        <label>
+                            <input type="checkbox" id="i_agree" name="i_agree"><span class="checkbox"></span>Я принимаю <a class="checkbox_link" href="#">условия передачи персональных данных</a>
+                        </label>
+                    </div>
                 </div>
             </form>
         </div>
