add media 768 first part

--- a/index.html
+++ b/index.html
@@ -42,14 +42,16 @@
     </div>
 </header>
 <div class="position">
-<div class="container">
-    <h1>Вам нужен фирменный <br> стиль или ребрендинг?</h1>
-    <p>Разработаем в срок от 10-ти дней</p>
-    <a href="#" class="btn">Портфолио <i class="fas fa-suitcase"></i>
-    </a>
-    <a href="#" class="btn">Оставить заявку <i class="fas fa-file-alt"></i>
-    </a>
-</div>
+    <div class="container">
+        <h1>Вам нужен фирменный <br> стиль или ребрендинг?</h1>
+        <p>Разработаем в срок от 10-ти дней</p>
+        <div class="flex_btn">
+            <a href="#" class="btn">Портфолио <i class="fas fa-suitcase"></i>
+            </a>
+            <a href="#" class="btn">Оставить заявку <i class="fas fa-file-alt"></i>
+            </a>
+        </div>
+    </div>
 </div>
 <div class="owl-carousel">
     <section class="main_banner"></section>
@@ -112,11 +114,9 @@
                 <p>Стоимость разработки фирменного стиля в нашем агентстве начинается от 120 000 руб., финальную планку без брифинга определить невозможно - давайте созвонимся и обсудим ваш проект!</p>
                 <p>Каждый клиент нашего агентства получает приятный бонус на финише проекта, о котором мы расскажем ниже ▼</p>
             </div>
-            <div>
+            <div class="desc_block">
                 <h3 class="title_2">Сколько стоит фирменный стиль?</h3>
-                <div>
-                    <img class="project_banner" src="images/Rectangle20.jpg" alt="price">
-                </div>
+                <img class="project_banner" src="images/Rectangle20.jpg" alt="price">
             </div>
         </div>
     </div>
