add media, change index, css

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/media.css">
+
+
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/owl.theme.default.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 
 </head>
 <body>
@@ -81,15 +83,15 @@
             <ul class="list">
                <li>
                    <span>1</span>
-                   <p>Название<br> компании</p>
+                   <p>Название<!--<br>--> компании</p>
                </li>
                <li>
                    <span>2</span>
-                   <p>Логотип –<br> основной<br> графический<br> символ</p>
+                   <p>Логотип –<!--<br>--> основной<!--<br>--> графический<!--<br>--> символ</p>
                </li>
                <li>
                    <span>3</span>
-                   <p>Фирменные<br> цвета всей <br>коммуникации <br>(онлайн и оффлайн)</p>
+                   <p>Фирменные<!--<br>--> цвета всей <!--<br>-->>коммуникации<br>(онлайн и оффлайн)<br>
                </li>
                 <li>
                     <span>4</span>
@@ -98,7 +100,7 @@
                 <li>
                     <span>5</span>
                     <div>
-                        <p>Носители<br> фирменного<br> стиля</p>
+                        <p>Носители<!--<br>--> фирменного<!--<br>--> стиля</p>
                         <p class="set">Этот набор варьируется в зависимости от нужд и потребностей компании: визитные карточки, фирменные бланки и прочая деловая документация, упаковка, сувенирная продукция, брендинг автотранспорта.</p>
                     </div>
                 </li>
@@ -123,63 +125,72 @@
 </section>
 <!-- -->
 <section>
-    <div class="container project project_amp">
+    <div class="container project_amp">
         <div>
             <img class="project_banner" src="images/project_1.jpg" alt="project_amperia">
         </div>
         <div class="d_flex_project">
+            <div>
             <h3>Amperia</h3>
-            <a href="#">Смотреть проект</a>
+            <p>Бренд красивых сувениров<br> и подарков для дома</p>
         </div>
-        <p>Бренд красивых сувениров<br> и подарков для дома</p>
+        <a href="#">Смотреть проект</a>
+        </div>
     </div>
 </section>
 <!-- -->
 <section>
-    <div class="container project">
+    <div class="container">
         <div>
             <img class="project_banner" src="images/project_2.jpg" alt="project_AQLifecare">
         </div>
         <div class="d_flex_project">
-            <h3>AQ.Lifecare</h3>
+            <div>
+                <h3>AQ.Lifecare</h3>
+                <p>Инновационная клиника<br> внутривенной медицины</p>
+            </div>
             <a href="#">Смотреть проект</a>
         </div>
-        <p>Инновационная клиника<br> внутривенной медицины</p>
     </div>
 </section>
 <!-- -->
 <section>
-    <div class="container project">
+    <div class="container">
         <div>
             <img class="project_banner" src="images/project_3.jpg" alt="project_Vilata">
         </div>
         <div class="d_flex_project">
+            <div>
             <h3>Vilata</h3>
-            <a href="#">Смотреть проект</a>
+            <p>Бренд натуральных и<br> вкусных соусов</p>
+            </div>
+        <a href="#">Смотреть проект</a>
         </div>
-        <p>Бренд натуральных и<br> вкусных соусов</p>
     </div>
 </section>
 <!-- -->
 <section>
-    <div class="container project">
+    <div class="container">
         <div>
             <img class="project_banner" src="images/project_4.jpg" alt="project_Coral_Black">
         </div>
         <div class="d_flex_project">
-            <h3>Coral Black</h3>
+            <div>
+                <h3>Coral Black</h3>
+                <p>Черная икра в современной<br> инторпритации</p>
+            </div>
             <a href="#">Смотреть проект</a>
         </div>
-        <p>Черная икра в современной<br> инторпритации</p>
     </div>
 </section>
 <!-- -->
 <section>
     <div class="container">
         <h3 class="title_2">Гайдлайны в подарок</h3>
-        <div class="d_flex_project">
-            <div>
-                <img class="guideline_banner" src="images/Rectangle69.jpg" alt="Guideline">
+        <div class="d_flex_guideline">
+            <div class="guideline_banner">
+                <img class="guideline_banner_1" src="images/Rectangle69.jpg" alt="Guideline">
+                <img class="guideline_banner_2" src="images/Rectangle29.jpg" alt="guideline">
             </div>
             <div class="about_guideline">
                 <div>
@@ -403,13 +414,11 @@
 </footer>
 
 
-
-
+<script src="https://kit.fontawesome.com/5c6559e651.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
         crossorigin="anonymous"></script>
 <script src="js/owl.carousel.js"></script>
-<script src="https://kit.fontawesome.com/5c6559e651.js" crossorigin="anonymous"></script>
 <script src="js/scripts.js"></script>
 </body>
 </html>
