--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 <section class="stages_2">
     <div class="container">
         <div class="flex_block">
-            <div class="block_1"></div>
+            <div class="block_1 block_1_1"></div>
             <div class="block_2 caption">Фрилансер</div>
             <div class="block_3 caption_2">Free.creative</div>
             <div class="block_4 caption">Большое агентство с именем</div>
