--- a/index.html
+++ b/index.html
@@ -19,99 +19,54 @@
 </head>
 <body>
 
-<div id="dialog" title="Basic dialog">
-    <p>This is an animated dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the &apos;x&apos; icon.</p>
+<div id="dialog" title="Оставить заявку">
+    <form action="#" method="post">
+        <div>
+            <label for="first_name_3"></label>
+            <input class="first_name_phone_3" id="first_name_3" type="text" name="first_name" placeholder="Ваше Имя">
+        </div>
+        <div>
+            <label for="phone_3"></label>
+            <input class="first_name_phone_3" id="phone_3" type="tel" name="phone" placeholder="+7 (999) 999-99-99">
+        </div>
+        <div>
+            <label class="checkbox_label" for="i_agree_3">
+                <input type="checkbox" id="i_agree_3" name="i_agree"><span class="checkbox"></span>Я принимаю <a  class="checkbox_link" href="#"> условия передачи персональных данных</a>
+            </label>
+        </div>
+        <div>
+            <button class="btn_application" type="submit">Оставить заявку</button>
+        </div>
+    </form>
 </div>
 
-<header class="cd-header">
+<header>
     <div class="container">
         <a href="#" class="logo">
             <img src="images/logo.svg" alt="logo">
         </a>
         <div class="d_flex">
-            <p>
-                Разрабатываем фирменные<br> стили с 2009 года
-            </p>
-            <ul>
-                <li>
-                    <span>8 (495) 156-39-11</span>
-                </li>
-                <li>
-                    <a href="#" class="soc" title="facebook" target="_blank">
-                        <img src="images/Vector1.svg" alt="facebook">
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="soc" title="instagram" target="_blank">
-                        <img src="images/Group8.svg" alt="instagram">
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="nav-but-wrap">
-            <div class="menu-icon hover-target">
-                <span class="menu-icon__line menu-icon__line-left"></span>
-                <span class="menu-icon__line"></span>
-                <span class="menu-icon__line menu-icon__line-right"></span>
-            </div>
+        <p>
+            Разрабатываем фирменные<br> стили с 2009 года
+        </p>
+        <ul>
+            <li>
+                <span>8 (495) 156-39-11</span>
+            </li>
+            <li>
+                <a href="#" class="soc" title="facebook" target="_blank">
+                    <img src="images/Vector1.svg" alt="facebook">
+                </a>
+            </li>
+            <li>
+                <a href="#" class="soc" title="instagram" target="_blank">
+                    <img src="images/Group8.svg" alt="instagram">
+                </a>
+            </li>
+        </ul>
         </div>
     </div>
 </header>
-
-
-
-
-<div class="nav">
-    <div class="nav__content">
-        <ul class="nav__list">
-            <li class="nav__list-item"><a href="#" class="hover-target">Портфолио</a></li>
-            <li class="nav__list-item"><a href="#" class="hover-target">Как мы работаем</a></li>
-            <li class="nav__list-item"><a href="#" class="hover-target">Преимущества</a></li>
-        </ul>
-    </div>
-</div>
-
-
-<div class='cursor' id="cursor"></div>
-<div class='cursor2' id="cursor2"></div>
-<div class='cursor3' id="cursor3"></div>
-
-
-
-
-
-
-
-
-
-
-<!--<header>-->
-<!--    <div class="container">-->
-<!--        <a href="#" class="logo">-->
-<!--            <img src="images/logo.svg" alt="logo">-->
-<!--        </a>-->
-<!--        <div class="d_flex">-->
-<!--        <p>-->
-<!--            Разрабатываем фирменные<br> стили с 2009 года-->
-<!--        </p>-->
-<!--        <ul>-->
-<!--            <li>-->
-<!--                <span>8 (495) 156-39-11</span>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--                <a href="#" class="soc" title="facebook" target="_blank">-->
-<!--                    <img src="images/Vector1.svg" alt="facebook">-->
-<!--                </a>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--                <a href="#" class="soc" title="instagram" target="_blank">-->
-<!--                    <img src="images/Group8.svg" alt="instagram">-->
-<!--                </a>-->
-<!--            </li>-->
-<!--        </ul>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</header>-->
 <div class="position">
     <div class="container">
         <h1>Вам нужен фирменный <br> стиль или ребрендинг?</h1>
