add dialog media, styles

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <input class="first_name_phone_3" id="phone_3" type="tel" name="phone" placeholder="+7 (999) 999-99-99">
         </div>
         <div>
-            <label class="checkbox_label" for="i_agree_3">
+            <label class="checkbox_label_3" for="i_agree_3">
                 <input type="checkbox" id="i_agree_3" name="i_agree"><span class="checkbox"></span>Я принимаю <a  class="checkbox_link" href="#"> условия передачи персональных данных</a>
             </label>
         </div>
